# arxiv-pdf-meta

./: .gitignore  Cargo.toml  Manifest.toml  README.md  all.csv  analysis.jl  flake.nix
src/: main.rs
