[package]
name = "arxiv-pdf-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
pdf = { git = "https://github.com/pdf-rs/pdf", branch = "master" }
serde = { version = "1.0.188", features = ["derive"] }
